--- a/WebLegemClient/src/app/gestion-documental/documento/crear-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/crear-documento.tmpl.html
@@ -1,5 +1,5 @@
 ﻿<div class="tapiz">
-    <div style="height:100px;"></div>
+    <div class="espacio_blanco"></div>
     <div class="tapiz_contenido">
 
 
