--- a/WebLegemClient/src/app/login/login.tmpl.html
+++ b/WebLegemClient/src/app/login/login.tmpl.html
@@ -10,7 +10,7 @@
 
             <!----------------------------------------------------->
             <div ng-messages ng-show="form_login.usuario.$invalid">
-                <div class="a_validacion" ng-message ng-show="form_login.usuario.$dirty">{{vm.language.strings.CompleteCampo}}</div>
+                <div class="msj-error" ng-message ng-show="form_login.usuario.$dirty">{{vm.language.strings.CompleteCampo}}</div>
             </div>
 
 
