--- a/WebLegemClient/src/app/usuarios/usuarios.tmpl.html
+++ b/WebLegemClient/src/app/usuarios/usuarios.tmpl.html
@@ -1,6 +1,6 @@
 ﻿<div class="tapiz">
 
-    <div style="height:85px;"></div>
+    <div class="espacio_blanco"></div>
 
     <div class="tapiz_contenido">
 
