--- a/WebLegemClient/src/css/elementos/input_text.css
+++ b/WebLegemClient/src/css/elementos/input_text.css
@@ -104,7 +104,13 @@
 
 /*════════════════════════════════════════════════════════════════════════════════════════════════════════════*/
 
-
+.a_input.disable,
+.input_text_btn.disable,    
+.input_text_ico.disable {
+    pointer-events: none;
+    background:rgba(0,0,0,.08);
+    color:#555;
+}
 
 /***************************************************************************************************************/
 
