--- a/WebLegemClient/src/app/anotacion/anotacion.tmpl.html
+++ b/WebLegemClient/src/app/anotacion/anotacion.tmpl.html
@@ -1,6 +1,6 @@
 ﻿<div class="tapiz" >
 
-    <div style="height:100px;"></div>
+    <div class="espacio_blanco"></div>
 
     <div class="tapiz_contenido">
 
