--- a/WebLegemClient/src/common/components/wl-lista-tipos-anotacion/wl-lista-tipos-anotacion.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-lista-tipos-anotacion/wl-lista-tipos-anotacion.tmpl.html
@@ -1,17 +1,33 @@
 ﻿<div>
     <label class="texto_labels" style="margin-top:10px;">Lista de tipo de anotacion</label>
-    <input type="text" ng-model="vm.filter" class="a_input" />
+
+    <div class="box_input_btn">
+        <input type="text"
+               class="input_text_btn"
+               ng-class="vm.editando? 'disable': ''"
+               maxlength="20"
+               ng-model="vm.filter" />
+        <button class="btn_cancel" title="Quitar filtro" ng-click="vm.filter=''" ng-show="vm.filter.length > 2">
+            <span class="ico-plus"></span>
+        </button>
+    </div>
+
     <ul class="a_listado" style="width: 100%;">
-        <li ng-repeat="tipo in vm.lista | filter: vm.filter">
+
+        <li ng-repeat="tipo in vm.lista | filter: vm.filter"
+            ng-class="vm.editando? 'no_selecteable': ''">
 
             <input type="radio"
                    name="tipo_anotacion_rad"
                    class="styled"
                    id="rad_te_{{tipo.id}}" />
 
-            <label class="styled"
-                    ng-click="vm.seleccionar(tipo)"
-                    for="rad_te_{{tipo.id}}">{{ tipo.nombre }}</label>
+            <label class="styled" ng-class="vm.checkear(tipo)? 'animated': ''"
+                   ng-click="vm.seleccionarObjeto(tipo)"
+                   ng-checked="vm.checkear(tipo)"
+                   for="rad_te_{{tipo.id}}">
+                {{ tipo.nombre }}
+            </label>
         </li>
     </ul>
- </div>
+</div>
